Navbar overlapping content after scrooling: Fixed

--- a/style.css
+++ b/style.css
@@ -2,17 +2,22 @@
     font-size: 1.1rem;
 }
 
+html{
+    scroll-behavior: smooth;
+    scroll-padding-top: 80px;
+
+}
+
 body {
     margin: 0;
     padding: 0;
     height: 100%;
     width: 100%;
     font-family: 'Oswald', sans-serif;
-  }
+}
 
 
 #header{
-    position: fixed;
     display: flex;
     align-items: center;
     padding: 0px 10%;
@@ -69,11 +74,12 @@ a{
     padding: 0 10%;
     font-family:  sans-serif;
     text-align: center;
+
     /* border: 3px solid blueviolet; */
 }
 
 p{
-    font-family: 'Oswald', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #top{
@@ -110,6 +116,7 @@ h2{
     font-size: 1.5rem;
 }
 
+
 .video-wrap{
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -117,6 +124,8 @@ h2{
     justify-content: space-between;
     align-content: space-between;
     text-align: justify;
+    padding: 0;
+    
 }
 
 #video{
@@ -136,8 +145,6 @@ h2{
     flex-direction: row;
     justify-content: space-between;
     padding: 0;
-    margin: 0;
-
 }
 
 #features h3{
